<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_start"
		android:icon="@android:drawable/ic_media_play"
		android:title="@string/action_top_start"
		android:visible="true"
		android:orderInCategory="1"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_next"
		android:icon="@android:drawable/ic_media_next"
		android:title="@string/action_top_force_next"
		android:orderInCategory="5"
		app:showAsAction="always"/>

	<item
		android:id="@+id/action_sets"
		android:icon="@android:drawable/ic_dialog_dialer"
		android:title="@string/action_top_manage_sets"
		android:orderInCategory="15"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/action_default_all"
		android:icon="@android:drawable/ic_menu_revert"
		android:title="@string/action_top_list_defaults"
		android:titleCondensed="@string/action_top_list_defaults_condensed"
		android:orderInCategory="20"
		app:showAsAction="ifRoom" />

	<!-- Settings, should always be in the overflow -->
	<item android:id="@+id/action_settings"
		  android:icon="@android:drawable/ic_menu_preferences"
		  android:title="@string/action_settings"
		  android:orderInCategory="50"
		  app:showAsAction="ifRoom"/>
</menu>