<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:orientation="vertical"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent">

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/app_name"
		android:id="@+id/headerTextView"
		android:layout_gravity="center_horizontal"/>

	<ImageButton
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:id="@+id/logoImageView"
		android:layout_gravity="center_horizontal"
		android:src="@mipmap/snazzy_walrus_icon2"
		android:contentDescription="App Logo"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/app_tagline"
		android:id="@+id/taglineTextView"
		android:layout_gravity="center_horizontal"
		android:textStyle="italic"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/dialog_bonus_dev_text"
		android:id="@+id/devTextView"
		android:layout_gravity="center_horizontal"
		android:typeface="serif"
		android:enabled="false"/>
</LinearLayout>